testsuite/tests/gnatcheck_errors/invalid_lkql_rules_config/invalid_semantic.lkql
val invalid_operation = true + 42
